# Aili-agent

./: .gitignore  Cargo.toml  README.md
src/: chat.rs  config.rs  lib.rs  logo.rs  main.rs  provider.rs  stream.rs  wizard.rs
src/stream/: anthropic.rs  gemini.rs  mod.rs  openai_compat.rs
src/tui/: dialog.rs  keymap.rs  mod.rs  render.rs  scrollbox.rs  stream_state.rs
tests/: streaming.rs
