[package]
name = "aili"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-util", "io-std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
reqwest-eventsource = "0.6"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "5"
anyhow = "1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["bracketed-paste", "event-stream"] }
tui-textarea = "0.7"
textwrap = "0.16"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-util", "io-std", "test-util"] }
